--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
+    <div id="nav" class="container d-flex flex-column flex-md-row justify-content-between">
       <a class="py-2 d-none d-md-inline-block" href="Home.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
@@ -85,7 +85,7 @@
     <div id="accordion" role="tablist">
 
       <!-- Acordeon paara desplegar productos          -->
-      <!-- <div class="card">
+      <!--<div class="card">
         <div class="card-header" role="tab" id="headingOne">
           <h5 class="mb-0">
             <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -102,7 +102,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>  -->
 </body>
 
 </html>
