--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 
 <head>
+  <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="83129566340-dg7hp1b4uasajtp0iecoubt7slel2l1k.apps.googleusercontent.com">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -17,22 +19,25 @@
   <link href="login.css" rel="stylesheet">
 </head>
 
-<body class="text-center">
-    <div class="login-page">
-      <div class="form">
-        <form id="formulario "class="login-form" >
-          <input id="user" "type="text" placeholder="username" required/>
-          <input id="pass" type="password" placeholder="password" required/>
-          <p class="message">Not registered? <a href="#">Create an account</a></p>         
-        </form>
-        <button type="" id="button">Entrar</button>
-      </div>
+<body class="jumbotron text-center">
+  <div class="login-page">
+    <div class="form">
+      <form id="formulario " class="login-form">
+        <input id="user" "type=" text" placeholder="username" required />
+        <input id="pass" type="password" placeholder="password" required />
+        <p class="message">Not registered? <a href="#">Create an account</a></p>
+      </form>
+      <button type="" id="button">Entrar</button>
+      <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     </div>
-    </div>
-  
+  </div>
+  </div>
 
-  <script src="js/init.js"></script>
+
+
   <script src="js/login.js"></script>
   <script src="js/register.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
+
 </html>
