--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class="message">Not registered? <a href="#">Create an account</a></p>
       </form>
       <button type="" id="button">Entrar</button>
-      <div id="google" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+      <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     </div>
   </div>
   </div>
