--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script src="js/login.js"></script>
   <script src="js/register.js"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="js/init.js"></script>
 </body>
 
 </html>
