--- a/products.html
+++ b/products.html
@@ -35,10 +35,10 @@
           <div class="col text-right">
               <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                   <label class="btn btn-light active" id="sortAsc" >
-                      <input type="radio" name="options" autocomplete="off" checked>A-Z
+                      <input type="radio" name="options" autocomplete="off" checked>1-9
                   </label>
                   <label class="btn btn-light" id="sortDesc" >
-                      <input type="radio" name="options" autocomplete="off">Z-A
+                      <input type="radio" name="options" autocomplete="off">9-1
                   </label>
                   <label class="btn btn-light" id="sortByCount" >
                       <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
