--- a/products.html
+++ b/products.html
@@ -43,6 +43,8 @@
             <label class="btn btn-light" id="sortByCount">
               <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
             </label>
+              <input type="search" class="form-control"  placeholder="Buscar" id="buscador">
+            </label>
           </div>
         </div>
       </div>
