Entrega 2 JAP + desafíate
Funciona la curz del buscador

--- a/products.html
+++ b/products.html
@@ -43,7 +43,6 @@
             <label class="btn btn-light" id="sortByCount">
               <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
             </label>
-              <input type="search" class="form-control"  placeholder="Buscar" id="buscador">
             </label>
           </div>
         </div>
@@ -51,6 +50,7 @@
       <div class="row justify-content-end">
         <div class="col-md-6"></div>
         <div class="col-md-6 col-sm-12 mb-1 container">
+            <input type="search" class="form-control mb-3" placeholder="Buscar" id="buscador">
           <div class="row container p-0 m-0">
             <div class="col">
               <p class="font-weight-normal text-right my-2">Precio.</p>
@@ -84,4 +84,5 @@
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/init.js"></script>
       <script src="js/products.js"></script>
+
 </html>
