--- a/categories.html
+++ b/categories.html
@@ -48,6 +48,7 @@
             <div class="row justify-content-end">
               <div class="col-md-6"></div>
                 <div class="col-md-6 col-sm-12 mb-1 container">
+                  <input type="search" class="form-control mb-3" placeholder="Buscar" id="buscador">
                   <div class="row container p-0 m-0">
                     <div class="col">
                       <p class="font-weight-normal text-right my-2">Cant.</p>
