--- a/product-info.html
+++ b/product-info.html
@@ -43,6 +43,8 @@
         </div>
       </dd>
     </dl>
+    <dt>Productos relacionados</dt>
+    <div id="relatedProducts"></div>
     <dt>Comentarios</dt>
     <div id="comments"></div>
   </div>
