--- a/cart.html
+++ b/cart.html
@@ -44,8 +44,14 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
     </div>
   </nav>
-  <div id="productsCart">
-    
+  <div class="row">
+    <div class="container mt-5">
+      <div id="productsCart">
+      </div>
+    </div>
+    <div class="class containter mt 5">
+      
+    </div>
   </div>
   <div id="spinner-wrapper">
     <div class="lds-ring">
