funciona la calculadora pero no convierte

--- a/cart.html
+++ b/cart.html
@@ -44,13 +44,20 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
     </div>
   </nav>
-  <div class="row">
-    <div class="container mt-5">
-      <div id="productsCart">
+  <!-- productos en el carrito -->
+  <div class="container-fluid">
+    <div id="productContainer" class="row">
+      <div class="col-lg-8 mt-5">
+        <div id="productsCart">
+        </div>
+      </div>
+      <div class="col-lg-4 mt-5">
+        <div id="calculator">
+        </div>
       </div>
     </div>
     <div class="class containter mt 5">
-      
+
     </div>
   </div>
   <div id="spinner-wrapper">
