--- a/cart.html
+++ b/cart.html
@@ -54,10 +54,26 @@
       <div class="col-lg-4 mt-5">
         <div id="calculator">
         </div>
+        <div class="row" id="subtotal">
+
+        </div>
       </div>
     </div>
-    <div class="class containter mt 5">
-
+    <div class="class containter mt-5 mb-7 ml-5">
+      <h5 class="mb-3">Tipo de envío</h5>
+      <div class="d-block my-3">
+        <div class="custom-control custom-radio">
+          <input id="goldradio" name="publicationType" type="radio" class="custom-control-input" checked="" required="">
+          <label class="custom-control-label" for="goldradio">Gold (13%)</label>
+        </div>
+        <div class="custom-control custom-radio">
+          <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="premiumradio">Premium (7%)</label>
+        </div>
+        <div class="custom-control custom-radio">
+          <input id="standardradio" name="publicationType" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="standardradio">Estándar (3%)</label>
+        </div>
     </div>
   </div>
   <div id="spinner-wrapper">
