--- a/cart.html
+++ b/cart.html
@@ -45,13 +45,13 @@
     </div>
   </nav>
   <!-- productos en el carrito -->
-  <div class="container-fluid">
+  <div class="container-fluid col-md-8">
     <div id="productContainer" class="row">
-      <div class="col-lg-8 mt-5">
+      <div class="col-lg-7 mt-5">
         <div id="productsCart">
         </div>
       </div>
-      <div class="col-lg-4 mt-5">
+      <div class="col-lg-5 mt-5">
         <div id="calculator">
         </div>
         <div class="row" id="subtotal">
