--- a/categories.html
+++ b/categories.html
@@ -70,8 +70,12 @@
         </div>
       </div>
     </div>
-    <div class="album py-5 bg-light">
-      <div class="row mt-5" id="cat-list-container"></div>
+    <div class="container">
+    <div class="row">
+        <div class="album py-5 bg-light">
+          <div class="row mt-5" id="cat-list-container"></div>
+        </div>
+    </div>
     </div>
   </main>
   <footer class="text-muted bg-light">
