--- a/my-profile.html
+++ b/my-profile.html
@@ -76,7 +76,7 @@
               <label for="exampleFormControlFile1">Example file input</label>
             </div>
             <div class="col">
-              <input type="file" id="inputPhoto" onchange="newPhoto()" class="form-control-file" id="exampleFormControlFile1">
+              <input type="file" id="inputPhoto" onchange="newPhoto()" class="form-control-file2" id="exampleFormControlFile1">
               <img id="profilePhoto" src="" height="200"> 
             </div>
           </div>
