--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
 
 <body id="body">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">E-Mercado</a>
+    <a class="navbar-brand" href="home.html">E-Mercado</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
