--- a/my-profile.html
+++ b/my-profile.html
@@ -55,7 +55,7 @@
           <a class="nav-link" href="sell.html">Sell</a>
         </li>
         <li class="nav-item dropdown active">
-          <a id="user" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a id="nav" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
