--- a/sell.html
+++ b/sell.html
@@ -56,7 +56,7 @@
           <a class="nav-link" href="sell.html">Sell</a>
         </li>
         <li class="nav-item dropdown">
-          <a id="user" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+          <a id="nav" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
             data-toggle="dropdown" aria-expanded="false">
 
           </a>
