--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <head>
   <meta name="google-signin-scope" content="profile email">
-  <meta name="google-signin-client_id" content="83129566340-dg7hp1b4uasajtp0iecoubt7slel2l1k.apps.googleusercontent.com">
+  <meta name="google-signin-client_id"
+    content="83129566340-dg7hp1b4uasajtp0iecoubt7slel2l1k.apps.googleusercontent.com">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -28,7 +29,8 @@
         <p class="message">Not registered? <a href="#">Create an account</a></p>
       </form>
       <button type="" id="button">Entrar</button>
-      <div id="google" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+      <div id="google" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark">
+      </div>
     </div>
   </div>
   </div>
