--- a/cart.html
+++ b/cart.html
@@ -258,7 +258,7 @@
     <script src="js/dropzone.js"></script>
     <script src="js/init.js"></script>
     <script src="js/cart.js"></script>
-    <div id="google" class="g-signin2 d-none" data-onsuccess="onSignIn" data-theme="dark"></div>
+    <div id="google" class="g-signin2 d-none" data-theme="dark"></div>
 </body>
 
 </html>
