--- a/home.html
+++ b/home.html
@@ -2,7 +2,9 @@
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="83129566340-dg7hp1b4uasajtp0iecoubt7slel2l1k.apps.googleusercontent.com">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <title>eMercado - Todo lo que busques está aquí</title>
@@ -42,7 +44,7 @@
               <a class="dropdown-item " href="cart.html">Carrito</a>
               <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="index.html" onclick="localStorage.clear()" >Cerrar Sesión</a>
+               <a class="dropdown-item" href="index.html" onclick="cerrarSesion()" >Cerrar Sesión</a>>
             </div>
           </li>
         </ul>
@@ -129,6 +131,7 @@
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
+     <script src="js/init.js"></script>
+    <div id="google" class="g-signin2 d-none" data-theme="dark"></div>
   </body>
 </html>
