--- a/categories.html
+++ b/categories.html
@@ -124,6 +124,7 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
    <script src="js/init.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
     <div id="google" class="g-signin2 d-none" data-theme="dark"></div>
   <script src="js/categories.js"></script>
 </body>
