--- a/sell.html
+++ b/sell.html
@@ -263,6 +263,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/dropzone.js"></script>
    <script src="js/init.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
     <div id="google" class="g-signin2 d-none" data-theme="dark"></div>
   <script src="js/sell.js"></script>
 </body>
