--- a/my-profile.html
+++ b/my-profile.html
@@ -129,6 +129,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/dropzone.js"></script>
    <script src="js/init.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
     <div id="google" class="g-signin2 d-none" data-theme="dark"></div>
   <script src="js/my-profile.js"></script>
 </body>
